--- a/style.css
+++ b/style.css
@@ -26,7 +26,9 @@ header {
     width: 75%;
     background-color: #fff;
     box-shadow: 0 10px 30px rgba(0,0,0,0.2);
+    transition: background-color 0.3s;
 }
+
 
 #intro p, #games p {
     line-height: 1.6;
@@ -60,9 +62,22 @@ header {
     transition: 0.3s;
 }
 
+.feature-card-dark {
+    background-color: #444444;
+    border: 2px solid #ff0000;
+    border-radius: 15px;
+    padding: 20px;
+    text-align: center;
+    transition: 0.3s;
+}
+
 .feature-card:hover {
     transform: translateY(-5px);
     background-color: #ffe5e5;
+}
+.feature-card-dark:hover {
+    transform: translateY(-5px);
+    background-color: #ff00002d;
 }
 
 #discord-section {
